--- a/directions.html
+++ b/directions.html
@@ -30,14 +30,26 @@
       <li class="dropdown2"><a href='directions.html'>Directions</a></li>
     </ul>
   </div>
-</nav>
-<ul class="sidenav" id="mobile-demo">
-  <li><a href="about.html">About</a></li>
-  <li><a href="providers.html">Providers</a></li>
-  <li><a href="services.html">Services</a></li>
-  <li><a href="contact.html">Get in Touch</a></li>
-  <li><a href="directions.html">Directions</a></li>
-</ul>
+  <nav>
+    <div class="light-blue accent-3 nav-wrapper">
+      <a href="home.html" class="brand-logo">Szuster Psychiatry</a>
+      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="providers.html">Insurance Providers</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li class="dropdown2"><a href='contact.html'>Get In Touch</a></li>
+        <li class="dropdown2"><a href='directions.html'>Directions</a></li>
+      </ul>
+    </div>
+  </nav>
+  <ul class="sidenav" id="mobile-demo">
+    <li><a href="about.html">About</a></li>
+    <li><a href="providers.html">Insurance Providers</a></li>
+    <li><a href="services.html">Services</a></li>
+    <li><a href="contact.html">Get in Touch</a></li>
+    <li><a href="directions.html">Directions</a></li>
+  </ul>
       <main>
     <h3>Directions</h3>
     <h5>We have been serving the Jackson Heights and greater New York City area since 2003</h5>
