--- a/providers.html
+++ b/providers.html
@@ -24,7 +24,7 @@
     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a href="about.html">About Us</a></li>
-      <li><a href="providers.html">Providers</a></li>
+      <li><a href="providers.html">Insurance Providers</a></li>
       <li><a href="services.html">Services</a></li>
       <li class="dropdown2"><a href='contact.html'>Get In Touch</a></li>
       <li class="dropdown2"><a href='directions.html'>Directions</a></li>
@@ -33,15 +33,23 @@
 </nav>
 <ul class="sidenav" id="mobile-demo">
   <li><a href="about.html">About</a></li>
+  <li><a href="providers.html">Insurance Providers</a></li>
+  <li><a href="services.html">Services</a></li>
+  <li><a href="contact.html">Get in Touch</a></li>
+  <li><a href="directions.html">Directions</a></li>
+</ul>
+<ul class="sidenav" id="mobile-demo">
+  <li><a href="about.html">About</a></li>
   <li><a href="providers.html">Providers</a></li>
   <li><a href="services.html">Services</a></li>
   <li><a href="contact.html">Get in Touch</a></li>
   <li><a href="directions.html">Directions</a></li>
 </ul>
 <main>
+  <h1>providers</h1>
+  <h5>Accepted Insurance plans: </h5>
+  <p>We take</p>
   <center>
-    <h1>providers</h1>
-    <h5>Accepted Insurance plans: </h5>
     <h8>1199SEIU</h8> <br>
     <h8>Aetna | Aetna Coventry</h8><br>
     <h8>Amerigroup</h8><br>
