--- a/contact.html
+++ b/contact.html
@@ -48,18 +48,22 @@
     <div class="form-group">
       <div class="form-row">
         <div class="col">
-          <input type="text" name="name" class="form-control" placeholder="Full Name" required>
+          <input type="text" name="name" class="form-control" required>
+          <label for="first_name">Full Name</label>
         </div>
         <div class="col">
-          <input type="email" name="email" class="form-control" placeholder="Email Address" required>
+          <input type="email" name="email" class="form-control"required>
+          <label for="email">Email</label>
         </div>
         <div class="col">
-          <input type="num" name="phonenumber" class="form-control" placeholder="Phone Number" required>
+          <input type="text" name="phonenumber" class="form-control"required>
+          <label for="phonenumber">Phone Number</label>
         </div>
       </div>
     </div>
     <div class="form-group">
       <textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
+      <label for="phonenumber">Your Message</label>
     </div>
     <div class="form-group">
       <input type="hidden" name="_next" value="https://szusterpsychiatry.netlify.app/thanks">
@@ -70,6 +74,8 @@
     <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>
   </form>
 </div>
+
+
 
 </div>
 </main>
