--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,12 @@
  <!-- adds materialize -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
  
-
+ <style>
+  body  {
+    background-image: url("https://images.unsplash.com/photo-1488901512066-cd403111aeb2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y291Y2glMjBjaGFpciUyMG9mZmljZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=800&q=60");
+    background-color: #cccccc;
+  }
+  </style>
 </head>
 
 <body>
@@ -39,7 +44,7 @@
   <li><a href="directions.html">Directions</a></li>
 </ul>
       <main>
-        <h1>Get In Contact Form</h1>
+        <h1 class="white-panel">Get In Contact Form</h1>
         <hr/>
         <br>
 
