--- a/contact.html
+++ b/contact.html
@@ -88,8 +88,8 @@
 <br/>
 <br/>
 <hr/>
-<h4>Or call us at: </h4>
-<h4>(718) 396-6766</h4>
+<h4 class="white-text">Or call us at: </h4>
+<h4 class="white-text">(718) 396-6766</h4>
 
 <!-- footer -->
 <footer class="light-blue accent-3 page-footer">
