--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
  
  <style>
   body  {
-    background-image: url("https://images.unsplash.com/photo-1488901512066-cd403111aeb2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y291Y2glMjBjaGFpciUyMG9mZmljZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=800&q=60");
+    background-image: url("https://images.unsplash.com/photo-1520699049698-acd2fccb8cc8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjJ8fGNvdWNoJTIwY2hhaXIlMjBvZmZpY2V8ZW58MHx8MHx8&auto=format&fit=crop&w=1400&q=60");
     background-color: #cccccc;
   }
   </style>
@@ -54,21 +54,24 @@
     <div class="form-group">
       <div class="form-row">
         <div class="col">
-          <input type="text" name="name" class="form-control" required>
-          <label for="first_name">Full Name</label>
+          <input type="text" name="name" class="card-panel white lighten-2 form-control" 
+          placeholder="                     Full Name"required>
+
         </div>
         <div class="col">
-          <input type="email" name="email" class="form-control"required>
-          <label for="email">Email</label>
+          <input type="email" name="email" class="card-panel white form-control"
+          placeholder="                     Email"required>
+
         </div>
         <div class="col">
-          <input type="text" name="phonenumber" class="form-control"required>
-          <label for="phonenumber">Phone Number</label>
+          <input type="text" name="phonenumber" class="card-panel white form-control" 
+          placeholder="                     Phone number"required>
         </div>
       </div>
     </div>
     <div class="form-group">
-      <textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
+      <textarea class="card-panel white form-control" name="message" rows="10" 
+      placeholder="                 Your Message"required ></textarea>
 
     </div>
     <div class="form-group">
