contact style done

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
  
  <style>
   body  {
-    background-image: url("https://images.unsplash.com/photo-1520699049698-acd2fccb8cc8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MjJ8fGNvdWNoJTIwY2hhaXIlMjBvZmZpY2V8ZW58MHx8MHx8&auto=format&fit=crop&w=1400&q=60");
+    background-image: url("https://images.unsplash.com/photo-1518012312832-96aea3c91144?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8Y291Y2glMjBjaGFpciUyMHBsYW50JTIwb2ZmaWNlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=700&q=60");
     background-color: #cccccc;
   }
   </style>
