--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
 <nav>
   <div class="light-blue accent-3 nav-wrapper">
     <a href="home.html" class="brand-logo">Szuster Psychiatry</a>
-    <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">☰</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a href="about.html">About Us</a></li>
       <li><a href="providers.html">Insurance Providers</a></li>
