--- a/thanks.html
+++ b/thanks.html
@@ -20,7 +20,7 @@
 <!-- header -->
 <nav>
   <div class="light-blue accent-3 nav-wrapper">
-    <a href="home.html" class="brand-logo">Szuster Psychiatry</a>
+    <a href="home.html" class="brand-logo">Szuster-Psychiatry</a>
     <a href="#" data-target="mobile-demo" class="sidenav-trigger">   <a href="#" data-target="mobile-demo" class="sidenav-trigger">☰</a>
     <ul class="right hide-on-med-and-down">
       <li><a href="about.html">About Us</a></li>
