--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,8 @@
 <!-- header -->
 <nav>
   <div class="light-blue accent-3 nav-wrapper">
-    <li><a href="home.html" class="brand-logo">Szuster-Psychiatry</a></li>
-    <a href="#" data-target="mobile-demo" class="sidenav-trigger">   <a href="#" data-target="mobile-demo" class="sidenav-trigger">☰</a>
+   <a href="home.html" class="left hide-on-med-and-down">Szuster-Psychiatry</a>
+    <a href="#" data-target="mobile-demo" class="sidenav-trigger">☰</a>
     <ul class="right hide-on-med-and-down">
       <li><a href="about.html">About Us</a></li>
       <li><a href="providers.html">Insurance Providers</a></li>
@@ -37,6 +37,7 @@
   </div>
 </nav>
 <ul class="sidenav" id="mobile-demo">
+  <li><a href="home.html">Szuster Psychiatry</a></li>
   <li><a href="about.html">About</a></li>
   <li><a href="providers.html">Insurance Providers</a></li>
   <li><a href="services.html">Services</a></li>
