--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
   <li><a href="directions.html">Directions</a></li>
 </ul>
       <main>
-        <h1 class="white-panel">Get In Contact Form</h1>
+        <h1 class="white-text">Get In Contact</h1>
         <hr/>
         <br>
 
@@ -81,7 +81,7 @@
       <input type="hidden" name="_captcha" value="false">
 
     </div>
-    <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>
+    <button type="submit" class="btn btn-lg btn-dark btn-block right">Submit Form</button>
   </form>
 </div>
 
