--- a/about.html
+++ b/about.html
@@ -13,7 +13,12 @@
  <!-- adds materialize -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
  
-
+ <style>
+  body  {
+    background-image: url("https://images.unsplash.com/photo-1527267207156-3372670819dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8bnljfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=700&q=60");
+    background-color: #cccccc;
+  }
+  </style>
 </head>
 
 <body>
@@ -41,9 +46,9 @@
 </ul>
 
 <main>
-  <h1>About Us</h1>
-<h3>Szuster Psychiatry Team</h3>
-<h5>We have been serving the Jackson Heights and greater New York City area since 2003. Our team is comprised of dedicated psychiatrists, psychiatric nurse practitioners and clinical social workers. We provide psychiatry and psychotherapy for individuals, families and couples.</h5>
+  <h1 class="white-text">About Us</h1>
+<h3 class="white-text">Szuster Psychiatry Team</h3>
+<h5 class="white-text">We have been serving the Jackson Heights and greater New York City area since 2003. Our team is comprised of dedicated psychiatrists, psychiatric nurse practitioners and clinical social workers. We provide psychiatry and psychotherapy for individuals, families and couples.</h5>
 <div class="row">
   <div class="col s12 m6">
     <div class="card">
