--- a/about.html
+++ b/about.html
@@ -46,9 +46,10 @@
 </ul>
 
 <main>
-  <h1 class="white-text">About Us</h1>
-<h3 class="white-text">Szuster Psychiatry Team</h3>
-<h5 class="white-text">We have been serving the Jackson Heights and greater New York City area since 2003. Our team is comprised of dedicated psychiatrists, psychiatric nurse practitioners and clinical social workers. We provide psychiatry and psychotherapy for individuals, families and couples.</h5>
+  <h1 class="card-panel white black-text center">About Us<br>
+    Szuster Psychiatry Team</h1>
+
+<h5 class="card-panel whitelight-black-text center">We have been serving the Jackson Heights and greater New York City area since 2003. Our team is comprised of dedicated psychiatrists, psychiatric nurse practitioners and clinical social workers. We provide psychiatry and psychotherapy for individuals, families and couples.</h5>
 <div class="row">
   <div class="col s12 m6">
     <div class="card">
