--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
   body  {
     background-image: url("https://images.unsplash.com/photo-1527267207156-3372670819dc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8bnljfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=700&q=60");
     background-color: #cccccc;
+ 
   }
   </style>
 </head>
@@ -46,10 +47,9 @@
 </ul>
 
 <main>
-  <h3 class="card-panel white black-text center">About Us<br>
-    Szuster Psychiatry Team</h3>
+  <h3 class="white-text center">About Us - Szuster Psychiatry Team</h3>
 
-<h5 class="flow-text card-panel white black-text center">We have been serving the Jackson Heights and greater New York City area since 2003. Our team is comprised of dedicated psychiatrists, psychiatric nurse practitioners and clinical social workers. We provide psychiatry and psychotherapy for individuals, families and couples.</h5>
+<h5 class="flow-text card-panel white black-text right">We have been serving the Jackson Heights and greater New York City area since 2003. Our team is comprised of dedicated psychiatrists, psychiatric nurse practitioners and clinical social workers. We provide psychiatry and psychotherapy for individuals, families and couples.</h5>
 <div class="row">
   <div class="col s12 m6">
     <div class="card">
