--- a/directions.html
+++ b/directions.html
@@ -60,7 +60,8 @@
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
-        <h5 class="white-text">Get in Touch with Szuster Psychiatry Today</h5>
+        <h5 class="white-text">Get in Touch with Szuster Psychiatry Today<br>
+          (718) 396-6766</h5>
         <p class="white-text">(718) 396-6766</p>
       </div>
       <div class="col l4 offset-l2 s12">
