--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
   
       <div class="caption center-align">
         <h3 class="blue-text text-darken-4">Hablamos Español!</h3>
-        <h5 class="panel light-blue text-accent-3">& Portuguese!</h5>
+        <h5 class="panel light-blue text-accent-3">Get in touch today!</h5>
       </div>
     </li>
   </ul>
@@ -95,6 +95,53 @@
        >
   </div>
 
+  <!-- slider  -->
+  <div class="slider">
+    <ul class="slides">
+      <li>
+        <img src="https://images.unsplash.com/photo-1459664018906-085c36f472af?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8d2VsbG5lc3N8ZW58MHx8MHx8&auto=format&fit=crop&w=700&q=60"
+        alt="code" 
+        width="450"
+        target="_blank"
+       > <!-- random image -->
+        <div class="caption center-align">
+          <h3 class="blue-text text-darken-4"></h3>
+          <h5 class="panel light-blue text-accent-3"></h5>
+        </div>
+      </li>
+      <li>
+        <img src="https://images.unsplash.com/photo-1488901512066-cd403111aeb2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y291Y2glMjBjaGFpciUyMG9mZmljZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=700&q=60"
+        alt="code" 
+        width="450"
+        target="_blank"> <!-- random image -->
+        <div class="caption left-align">
+          <h3 class="blue-text text-darken-4"></h3>
+          <h5 class="panel light-blue text-accent-3"></h5>
+        </div>
+      </li>
+      <li>
+        <img src="https://images.unsplash.com/photo-1555211652-5c6222f971bc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1yZWxhdGVkfDN8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=700&q=60"> <!-- random image -->
+        <div class="caption right-align"
+        alt="code" 
+        width="450"
+        target="_blank">
+        <h3 class="blue-text text-darken-4"></h3>
+        <h5 class="panel light-blue text-accent-3"></h5>
+        </div>
+      </li>
+      <li>
+        <img src="https://images.unsplash.com/photo-1623609907604-7e89999ca664?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8N3x8YnJlYXRoZXxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=700&q=60"
+        alt="code" 
+        width="450"
+        target="_blank"> <!-- random image -->
+    
+        <div class="caption center-align">
+          <h3 class="blue-text text-darken-4"></h3>
+          <h5 class="panel light-blue text-accent-3"></h5>
+        </div>
+      </li>
+    </ul>
+  </div>
 <!-- footer -->
 <footer class="light-blue accent-3 page-footer">
   <div class="container">
