--- a/providers.html
+++ b/providers.html
@@ -12,7 +12,13 @@
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
  <!-- adds materialize -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+ <style>
+  body  {
+    background-image: url("https://images.unsplash.com/photo-1625225233840-695456021cde?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjd8fGNhbGN1bGF0b3IlMjBtYXRofGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=700&q=60");
+    background-color: #cccccc;
  
+  }
+  </style>
 
 </head>
 
