--- a/providers.html
+++ b/providers.html
@@ -14,7 +14,7 @@
  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
  <style>
   body  {
-    background-image: url("https://images.unsplash.com/photo-1625225233840-695456021cde?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjd8fGNhbGN1bGF0b3IlMjBtYXRofGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=700&q=60");
+    background-image: url("https://images.unsplash.com/photo-1586652171272-8f18c34f79af?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTA0fHxnbGFzc2VzfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=700&q=60");
     background-color: #cccccc;
  
   }
@@ -46,20 +46,20 @@
   <li><a href="directions.html">Directions</a></li>
 </ul>
 <main>
-  <h1>providers</h1>
-  <h5>Accepted Insurance plans: </h5>
+  <h1 class="white-text">providers</h1>
+  <h5 class="white-text">Accepted Insurance plans: </h5>
   <center>
-    <h8>1199SEIU</h8> <br>
-    <h8>Aetna | Aetna Coventry</h8><br>
-    <h8>BlueCross and BlueShield</h8><br>
-    <h8>Cigna</h8><br>
-    <h8>Empire BlueCross BlueShield</h8><br>
-    <h8>GHI</h8><br>
-    <h8>HIP | Health Plan of New York</h8><br>
-    <h8>HealthFirst</h8><br>
-    <h8>Medicare</h8><br>
-    <h8>WellCare</h8><br>
-    <h8>Medicaid</h8><br>
+    <h8 class="white-text">1199SEIU</h8> <br>
+    <h8 class="white-text">Aetna | Aetna Coventry</h8><br>
+    <h8 class="white-text">BlueCross and BlueShield</h8><br>
+    <h8 class="white-text">Cigna</h8><br>
+    <h8 class="white-text">Empire BlueCross BlueShield</h8><br>
+    <h8 class="white-text">GHI</h8><br>
+    <h8 class="white-text">HIP | Health Plan of New York</h8><br>
+    <h8 class="white-text">HealthFirst</h8><br>
+    <h8 class="white-text">Medicare</h8><br>
+    <h8 class="white-text">WellCare</h8><br>
+    <h8 class="white-text">Medicaid</h8><br>
   </center> 
 </main>
 <!-- footer -->
