--- a/directions.html
+++ b/directions.html
@@ -13,7 +13,13 @@
  <!-- adds materialize -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
  
-
+ <style>
+  body  {
+    background-image: url("https://images.unsplash.com/photo-1567488836087-456a1d4e658e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8cmFpbmJvd3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=700&q=60");
+    background-color: #cccccc;
+ 
+  }
+  </style>
 </head>
 
 <body>
@@ -40,9 +46,9 @@
   <li><a href="directions.html">Directions</a></li>
 </ul>
       <main>
-    <h3>Directions</h3>
-    <h5>We have been serving the Jackson Heights and greater New York City area since 2003</h5>
-    <h4>(718) 396-6766</h4>
+    <h3 class="light-blue-text ">Directions</h3>
+    <h5 class="light-blue-text ">We have been serving the Jackson Heights and greater New York City area since 2003</h5>
+    <h4 class="light-blue-text ">(718) 396-6766</h4>
     <!-- map -->
     <center>
     <div class="mapouter"><div class="gmap_canvas"><iframe width="300" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=82-11%2037th%20Avenue&t=&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies-online.net">fmovies</a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:300px;}</style><a href="https://www.embedgooglemap.net">google map code</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:300px;}</style></div></div>
@@ -50,9 +56,9 @@
 
 <div>
 
-  <h4>82-11 37th Avenue</h4>
-  <h4>Suite 401</h4>
-  <h4>Jackson Heights, NY 11372</h4>
+  <h4 class="white-text">82-11 37th Avenue</h4>
+  <h4 class="white-text">Suite 401</h4>
+  <h4 class="white-text">Jackson Heights, NY 11372</h4>
 </div>
 </main>
 <!-- footer -->
